adding buttons and description

--- a/APLatinMap.html
+++ b/APLatinMap.html
@@ -5,7 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="APLatinMap.css">
 </head>
 <body>
-	<canvas id="canvas" width="750" height="478"> Your browser doesn't support HTML5 </canvas>
+	<div id= "buttons">
+		<button id= "previousButton"> Previous </button>
+		<button id= "nextButton"> Next </button>
+	</div>
+	<br>
+	<div id = "wrapper">
+		<canvas id="canvas" width="750" height="478"> Your browser doesn't support HTML5 </canvas>
+	</div>
+	<p id="description"></p>
 	<script type="text/javascript" src="APLatinMap.js"></script>
 </body>
 </html>
