--- a/APLatinMap.html
+++ b/APLatinMap.html
@@ -7,6 +7,7 @@
 <body>
 	<div id= "buttons">
 		<button id= "previousButton"> Previous </button>
+		<button id = "aeneidButton"> Aeneid </button>
 		<button id= "nextButton"> Next </button>
 	</div>
 	<br>
