Organized code and adding De Bello code

--- a/APLatinMap.html
+++ b/APLatinMap.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title> AP Latin Interactive Map | Drew Wadsworth </title>
 	<link rel="stylesheet" type="text/css" href="APLatinMap.css">
 </head>
 <body>
 	<div id= "buttons">
 		<button id= "previousButton"> Previous </button>
 		<button id = "aeneidButton"> Aeneid </button>
+		<button id = "deBelloButton"> De Bello Gallico </button>
 		<button id= "nextButton"> Next </button>
 	</div>
 	<br>
