--- a/APLatinMap.html
+++ b/APLatinMap.html
@@ -12,7 +12,7 @@
 		<button id= "nextButton"> Next </button>
 	</div>
 	<br>
-	<div id = "wrapper">
+	<div class = "wrapper">
 		<canvas id="canvas" width="750" height="478"> Your browser doesn't support HTML5 </canvas>
 	</div>
 	<p id="description"></p>
